[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-macaddress"
authors = [{name="Ryan Nowakowski", email="tubaman@fattuba.com"}]
maintainers = [{name="Arun Karunagath", email="the1.arun@gmail.com"}]
description = "MAC address model and form fields for Django apps."
readme = "README.rst"
license = {text = "BSD"}
dependencies = [
  "netaddr >= 1.3.0"
]
requires-python = ">=3.7"
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Internet :: WWW/HTTP',
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["Django>=2.2"]

[project.urls]
Repository = "https://github.com/django-macaddress/django-macaddress"
"Issue tracker" = "https://github.com/django-macaddress/django-macaddress/issues"

[tool.bdist_wheel]
universal = 1

# TODO: remove `tool.poetry` section and child sections after Poetry 2.0.0 with
#       support for `project` section is released
[tool.poetry]
name = "django-macaddress"
version = "1.8.0"
authors = ["Ryan Nowakowski <tubaman@fattuba.com>"]
description = "MAC address model and form fields for Django apps."

[tool.poetry.dependencies]
python = "^3.7"
netaddr = "^1.3.0"

[tool.poetry.group.dev.dependencies]
Django = ">=2.2"

[tool.setuptools]
packages=['django_macaddress', 'django_macaddress.tests']

[tool.setuptools.dynamic]
version = {attr = "django_macaddress.version.__version__"}
